--- a/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
@@ -24,7 +24,10 @@
             android:background="@drawable/rounded_button"
             android:padding="12dp"
             android:text="Check availability"
+            android:textAllCaps="false"
             android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="73dp"
             tools:layout_editor_absoluteY="106dp" />
 
@@ -39,7 +42,10 @@
             android:background="@drawable/rounded_button"
             android:padding="12dp"
             android:text="Reserve a parking"
+            android:textAllCaps="false"
             android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="73dp"
             tools:layout_editor_absoluteY="199dp" />
 
@@ -54,12 +60,15 @@
             android:background="@drawable/rounded_button"
             android:padding="12dp"
             android:text="Show reservations"
+            android:textAllCaps="false"
             android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="52dp"
             tools:layout_editor_absoluteY="318dp" />
 
         <RelativeLayout
-            android:layout_width="100dp "
+            android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_below="@+id/show_res_btn"
             android:layout_centerHorizontal="true"
