--- a/materiallogindemo-master/app/src/main/res/values/colors.xml
+++ b/materiallogindemo-master/app/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
   <color name="colorPrimary">#2196F3</color>
   <color name="primary_darker">#1976D2</color>
-  <color name = "colorPrimaryDark">#1976d2</color>
+  <color name = "colorPrimaryDark">#4383cc</color>
   <color name="primary_light">#BBDEFB</color>
-  <color name="colorAccent">#03A9F4</color>
+  <color name="colorAccent">#03a9f4</color>
   <color name="primary_text">#212121</color>
   <color name="secondary_text">#757575</color>
   <color name="icons">#FFFFFF</color>
