--- a/materiallogindemo-master/app/src/main/res/values/colors.xml
+++ b/materiallogindemo-master/app/src/main/res/values/colors.xml
@@ -4,9 +4,10 @@
   <color name="primary_darker">#1976D2</color>
   <color name = "colorPrimaryDark">#4383cc</color>
   <color name="primary_light">#BBDEFB</color>
-  <color name="colorAccent">#03a9f4</color>
+  <color name="colorAccent">#ff8516</color>
   <color name="primary_text">#212121</color>
   <color name="secondary_text">#757575</color>
   <color name="icons">#FFFFFF</color>
   <color name="divider">#BDBDBD</color>
+  <color name="colorAccent2">#ffa217</color>
 </resources>
