--- a/materiallogindemo-master/app/src/main/res/values/styles.xml
+++ b/materiallogindemo-master/app/src/main/res/values/styles.xml
@@ -8,4 +8,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="MyAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Used for the buttons -->
+        <item name="colorAccent">#4383cc</item>
+        <!-- Used for the title and text -->
+        <item name="android:textColorPrimary">#BBDEFB</item>
+        <!-- Used for the background -->
+        <item name="android:background">#FFFFFF</item>
+    </style>
+
 </resources>
