--- a/materiallogindemo-master/app/src/main/res/layout/activity_choices2.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_choices2.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bacground1"
     android:saveEnabled="true"
     tools:context="com.sourcey.materiallogindemo.Choices2"><![CDATA[
 
