--- a/materiallogindemo-master/app/src/main/res/layout/menu_list_item.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/menu_list_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="5dp" >
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/ResNo"
@@ -22,8 +21,8 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/date"
@@ -38,28 +37,11 @@
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/zoneName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:text="bbb"
-            android:textColor="@color/colorAccent" />
-
-    </RelativeLayout>
-    <RelativeLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:background="#ffffff">
-
-        <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:padding="10sp"
             android:text="4 lakhs"
@@ -72,8 +54,28 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:padding="5dp">
+
+        <TextView
+            android:id="@+id/zoneName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:padding="10sp"
+            android:text="bbb"
+            android:textColor="@color/colorAccent" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:padding="5dp">
 
 
         <Button
@@ -106,14 +108,14 @@
             android:textSize="18sp"
             android:textStyle="bold" />
     </RelativeLayout>
+
     <RelativeLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:background="#03A9F4">
-
+        android:background="#03A9F4"
+        android:padding="5dp">
 
 
     </RelativeLayout>
-  </LinearLayout>
+</LinearLayout>
