--- a/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bacground1"
     tools:context="com.sourcey.materiallogindemo.Choices"
     tools:layout_editor_absoluteY="81dp">
 
