--- a/materiallogindemo-master/app/src/main/res/layout/activity_first.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_first.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bacground1"
     tools:context="com.sourcey.materiallogindemo.First">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="397dp"
-        android:layout_height="0dp"
+        android:layout_width="364dp"
+        android:layout_height="171dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="52dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="38dp"
         android:src="@drawable/logo"
         app:layout_constraintBottom_toTopOf="@+id/normal_btn"
@@ -29,6 +31,7 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/vip_btn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -43,25 +46,8 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/normal_btn" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="389dp"
-        android:layout_height="15dp"
-        app:srcCompat="@color/colorAccent2"
-        tools:layout_editor_absoluteX="-5dp"
-        tools:layout_editor_absoluteY="0dp" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="398dp"
-        android:layout_height="23dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:srcCompat="@color/colorAccent" />
 
 </android.support.constraint.ConstraintLayout>
