--- a/materiallogindemo-master/app/src/main/res/layout/activity_zone_list3.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_zone_list3.xml
@@ -7,10 +7,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sourcey.materiallogindemo.ZonesList">
+    tools:context="com.sourcey.materiallogindemo.ZoneList2">
 
     <ListView
         android:id="@+id/customListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></ListView>
 </RelativeLayout>
+
