--- a/materiallogindemo-master/app/src/main/res/layout/property_layout_alt.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/property_layout_alt.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="10dp"
+    android:paddingTop="0dp"
     android:paddingBottom="10dp">
+
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginRight="10dp"
-        android:contentDescription="Property Image"
-        />
+        android:layout_width="150dp"
+        android:layout_height="180dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:contentDescription="Property Image" />
 
     <LinearLayout
         android:id="@+id/infoSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/image"
         android:layout_toRightOf="@+id/image"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="10dp"
+        android:paddingTop="30dp">
 
         <TextView
             android:id="@+id/address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text=" Zone Info"
-            android:background="#e2e2e2"
-            android:textColor="#ffffff"
-            android:padding="10px"
+            android:text="Zone Address"
+            android:textAlignment="gravity"
+            android:textColor="#22a2de"
             android:textSize="18sp" />
 
         <TextView
@@ -39,41 +44,78 @@
             android:layout_marginBottom="10dp"
             android:text="Description"
             android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button17"
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:layout_alignLeft="@+id/infoSection"
+                android:layout_alignStart="@+id/infoSection"
+                android:layout_below="@+id/infoSection"
+                android:layout_weight="1"
+                android:background="?attr/colorButtonNormal"
+                android:focusable="false" />
+
+            <Button
+                android:id="@+id/button18"
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:layout_alignLeft="@+id/button17"
+                android:layout_alignStart="@+id/button17"
+                android:layout_below="@+id/infoSection"
+                android:layout_weight="1"
+                android:background="?attr/colorButtonNormal"
+                android:focusable="false" />
+
+            <ImageView
+                android:id="@+id/img"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:visibility="gone"
+                app:srcCompat="@drawable/stopsign" />
+
+            <Button
+                android:id="@+id/button20"
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:layout_weight="1"
+                android:background="?attr/colorButtonNormal"
+                android:focusable="false" />
+
+            <Button
+                android:id="@+id/button21"
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:layout_weight="1"
+                android:background="?attr/colorButtonNormal"
+                android:focusable="false" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/statSection"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/infoSection"
-        android:orientation="vertical">
+        android:layout_alignBottom="@+id/image"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="46dp"
+        android:layout_marginStart="46dp"
+        android:text="TextView" />
 
-        <TextView
-            android:id="@+id/cuurentAvNo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="#CC0033"
-            android:textColor="#039bcc"
-            android:padding="5dp"
-            android:text="" />
-
-        <TextView
-            android:id="@+id/totalAv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/cuurentAvNo"
-            android:layout_marginRight="15dp"
-            />
-
-        <TextView
-            android:id="@+id/reservedSpots"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/cuurentAvNo"
-            android:layout_marginRight="15dp"
-            android:layout_toRightOf="@id/totalAv" />
-
-    </RelativeLayout>
 
 </RelativeLayout>
