--- a/materiallogindemo-master/app/src/main/res/layout/reservation_list.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/reservation_list.xml
@@ -3,16 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#e7e7e7" >
-
+    android:background="#e7e7e7">
 
 
     <ListView
-        android:visibility="visible"
         android:id="@+id/listMenu"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:divider="@null"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:visibility="visible" />
 
 </RelativeLayout>
