--- a/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="112dp"
+            android:layout_marginTop="82dp"
             android:background="@drawable/rounded_button"
             android:padding="12dp"
             android:text="Check availability"
@@ -61,6 +61,24 @@
             android:background="@drawable/rounded_button"
             android:padding="12dp"
             android:text="Show reservations"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="52dp"
+            tools:layout_editor_absoluteY="318dp" />
+
+        <Button
+            android:id="@+id/car_wash_btn"
+            android:layout_width="239dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/show_res_btn"
+            android:layout_alignStart="@+id/show_res_btn"
+            android:layout_below="@+id/show_res_btn"
+            android:layout_marginTop="37dp"
+            android:background="@drawable/rounded_button"
+            android:padding="12dp"
+            android:text="Request car care"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="18sp"
