--- a/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
@@ -24,7 +24,7 @@
             android:layout_marginTop="82dp"
             android:background="@drawable/rounded_button"
             android:padding="12dp"
-            android:text="Check availability"
+            android:text="Check Availability"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="18sp"
@@ -42,7 +42,7 @@
             android:layout_marginTop="36dp"
             android:background="@drawable/rounded_button"
             android:padding="12dp"
-            android:text="Reserve a parking"
+            android:text="Reserve a Parking"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="18sp"
@@ -60,7 +60,7 @@
             android:layout_marginTop="37dp"
             android:background="@drawable/rounded_button"
             android:padding="12dp"
-            android:text="Show reservations"
+            android:text="Show Reservations"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="18sp"
@@ -78,7 +78,7 @@
             android:layout_marginTop="37dp"
             android:background="@drawable/rounded_button"
             android:padding="12dp"
-            android:text="Request car care"
+            android:text="Request Car Care"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="18sp"
