--- a/materiallogindemo-master/app/src/main/res/layout/activity_choices2.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_choices2.xml
@@ -26,42 +26,74 @@
         android:id="@+id/reserve_btn3"
         android:layout_width="239dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/rounded_gray_button"
         android:editable="false"
+        android:onClick="Error"
         android:padding="12dp"
-        android:text="Reserve a parking"
+        android:text="Reserve a Parking"
+        android:textAllCaps="false"
         android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/check_btn3"
-        tools:clickable="false" />
+        app:layout_constraintTop_toBottomOf="@+id/check_btn3" />
+
+    <Button
+        android:id="@+id/car_care"
+        android:layout_width="239dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/rounded_gray_button"
+        android:editable="false"
+        android:onClick="Error"
+        android:padding="12dp"
+        android:text="Request Car Care"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/show_res_btn3" />
 
     <Button
         android:id="@+id/show_res_btn3"
         android:layout_width="239dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/rounded_gray_button"
         android:editable="false"
+        android:onClick="Error"
         android:padding="12dp"
-        android:text="Show reservations"
+        android:text="Show Reservations"
+        android:textAllCaps="false"
         android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reserve_btn3"
-        tools:clickable="false" />
+        app:layout_constraintTop_toBottomOf="@+id/reserve_btn3" />
 
     <Button
         android:id="@+id/check_btn3"
         android:layout_width="239dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="106dp"
+        android:layout_marginTop="88dp"
         android:background="@drawable/rounded_button"
+        android:onClick="checkAvailability"
         android:padding="12dp"
-        android:text="Check availability"
+        android:text="Check Availability"
+        android:textAllCaps="false"
         android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
