--- a/materiallogindemo-master/app/src/main/res/layout/activity_first.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_first.xml
@@ -1,53 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bacground1"
-    tools:context="com.sourcey.materiallogindemo.First">
+    tools:context="com.sourcey.materiallogindemo.First"
+    android:id="@+id/drawerLayout">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="364dp"
-        android:layout_height="171dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="52dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="38dp"
-        android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@+id/normal_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/normal_btn"
-        android:layout_width="239dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="19dp"
-        android:background="@drawable/rounded_button"
-        android:padding="12dp"
-        android:text="Continue as a normal user"
-        android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/vip_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <Button
-        android:id="@+id/vip_btn"
-        android:layout_width="239dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="90dp"
-        android:background="@drawable/rounded_button"
-        android:padding="12dp"
-        android:text="Continue as VIP user"
-        android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/normal_btn" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="100dp"
+                android:layout_height="171dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="52dp"
+                android:layout_marginStart="140dp"
+                android:layout_marginTop="38dp"
+                android:src="@drawable/logo3"
+                app:layout_constraintBottom_toTopOf="@+id/normal_btn"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/normal_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="19dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginStart="50dp"
+                android:background="@drawable/rounded_button"
+                android:padding="12dp"
+                android:text="Continue as Normal User"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/vip_btn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.503"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+            <Button
+                android:id="@+id/vip_btn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="90dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginStart="50dp"
+                android:background="@drawable/rounded_button"
+                android:padding="12dp"
+                android:text="Continue as VIP User"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.503"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/normal_btn" />
+
+        </android.support.constraint.ConstraintLayout>
+
+    <android.support.design.widget.NavigationView
+
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#ceebf9"
+        app:headerLayout="@layout/navigation_header"
+        app:itemIconTint="#1976D2"
+        app:itemTextColor="#1976D2"
+        app:menu="@menu/menu_main">
+
+    </android.support.design.widget.NavigationView>
+
+
+
+</android.support.v4.widget.DrawerLayout>
