--- a/materiallogindemo-master/app/src/main/res/menu/menu_main.xml
+++ b/materiallogindemo-master/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,8 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:id="@+id/nav_aboutParQU" android:title="About ParQU"  android:icon="@drawable/information"/>
+    <item android:id="@+id/nav_contactUs" android:title="Contact Us" android:icon="@drawable/phonecall"/>
+    <item android:id="@+id/nav_shareThisApp" android:title="Share This App" android:icon="@drawable/share"/>
+
+
 </menu>
