--- a/materiallogindemo-master/app/src/main/res/values/colors.xml
+++ b/materiallogindemo-master/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#2196F3</color>
-  <color name="primary_darker">#1976D2</color>
+  <color name="colorPrimary">#2196f3</color>
+  <color name="primary_darker">#1976d2</color>
   <color name = "colorPrimaryDark">#4383cc</color>
-  <color name="primary_light">#BBDEFB</color>
+  <color name="primary_light">#bbdefb</color>
   <color name="colorAccent">#ff8516</color>
   <color name="primary_text">#212121</color>
   <color name="secondary_text">#757575</color>
