--- a/materiallogindemo-master/app/src/main/res/values/styles.xml
+++ b/materiallogindemo-master/app/src/main/res/values/styles.xml
@@ -18,4 +18,12 @@
         <item name="android:background">#FFFFFF</item>
     </style>
 
+
+    <style name="AppTheme2" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
 </resources>
