--- a/materiallogindemo-master/app/src/main/res/layout/activity_check_availability_2.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_check_availability_2.xml
@@ -81,4 +81,42 @@
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/car12" />
 
+    <Spinner
+        android:id="@+id/SpotSpinner"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="11dp"
+        android:layout_toLeftOf="@+id/imageView9"
+        android:layout_toStartOf="@+id/imageView9"
+        tools:layout_editor_absoluteX="180dp"
+        tools:layout_editor_absoluteY="282dp" />
+
+    <Button
+        android:id="@+id/btnMap"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+
+        android:layout_alignBottom="@+id/SpotSpinner"
+        android:layout_toEndOf="@+id/imageView9"
+        android:layout_toRightOf="@+id/imageView9"
+        android:background="@drawable/rounded_button"
+        android:padding="12dp"
+        android:text="Get Directions"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        tools:layout_editor_absoluteX="37dp"
+        tools:layout_editor_absoluteY="110dp" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/SpotSpinner"
+        android:layout_alignStart="@+id/SpotSpinner"
+        android:layout_alignTop="@+id/btnMap"
+        android:text="Select a Spot Number" />
+
+
 </RelativeLayout>
