--- a/materiallogindemo-master/app/src/main/res/values/colors.xml
+++ b/materiallogindemo-master/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
   <color name="icons">#FFFFFF</color>
   <color name="divider">#BDBDBD</color>
   <color name="colorAccent2">#ffa217</color>
+  <color name="colorAccent3">#ed7d31</color>
 </resources>
