--- a/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
@@ -86,6 +86,24 @@
             tools:layout_editor_absoluteX="52dp"
             tools:layout_editor_absoluteY="318dp" />
 
+        <Button
+            android:id="@+id/pay_btn"
+            android:layout_width="239dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/car_wash_btn"
+            android:layout_alignStart="@+id/car_wash_btn"
+            android:layout_below="@+id/car_wash_btn"
+            android:layout_marginTop="37dp"
+            android:background="@drawable/rounded_button"
+            android:padding="12dp"
+            android:text="Payment"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="52dp"
+            tools:layout_editor_absoluteY="318dp" />
+
         <RelativeLayout
             android:layout_width="100dp"
             android:layout_height="100dp"
