--- a/materiallogindemo-master/app/src/main/res/layout/activity_payment.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_payment.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:stripe="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sourcey.materiallogindemo.PaymentActivity">
+    tools:context="com.sourcey.materiallogindemo.PayActivity">
 
-    <TextView
-        android:id="@+id/textView12"
+
+    <Button
+        android:id="@+id/button22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
-        android:text="TextView" />
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="13dp"
+        android:text="Button" />
 </RelativeLayout>
