--- a/materiallogindemo-master/app/src/main/res/layout/property_layout.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/property_layout.xml
@@ -56,6 +56,16 @@
         android:layout_marginStart="46dp"
         android:text="TextView" />
 
-
+    <Button
+        android:id="@+id/button"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/textView8"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_button"
+        android:text="History Data"
+        android:textAllCaps="false"
+        android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
 </RelativeLayout>
