--- a/materiallogindemo-master/app/src/main/res/layout/activity_first.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_first.xml
@@ -16,16 +16,33 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="171dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="52dp"
-                android:layout_marginStart="140dp"
-                android:layout_marginTop="38dp"
-                android:src="@drawable/logo3"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/logofinal"
                 app:layout_constraintBottom_toTopOf="@+id/btnMap"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="120dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.051"
+                app:srcCompat="@drawable/logofinal3" />
 
             <Button
                 android:id="@+id/btnMap"
@@ -51,7 +68,7 @@
                 android:id="@+id/vip_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="90dp"
+                android:layout_marginBottom="80dp"
                 android:layout_marginEnd="50dp"
                 android:layout_marginStart="50dp"
                 android:background="@drawable/rounded_button"
@@ -63,7 +80,7 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.503"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnMap" />
 
