--- a/materiallogindemo-master/app/src/main/res/values/colors.xml
+++ b/materiallogindemo-master/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
   <color name="divider">#BDBDBD</color>
   <color name="colorAccent2">#ffa217</color>
   <color name="colorAccent3">#ed7d31</color>
+  <color name="bar">#00aa4a</color>
 </resources>
