--- a/materiallogindemo-master/app/src/main/res/values/colors.xml
+++ b/materiallogindemo-master/app/src/main/res/values/colors.xml
@@ -12,4 +12,17 @@
   <color name="colorAccent2">#ffa217</color>
   <color name="colorAccent3">#ed7d31</color>
   <color name="bar">#00aa4a</color>
+  <color name="chart">#03A9F4</color>
+  <color name="b1">#d6d7d7</color>
+  <color name="b2">#db0101</color>
+  <color name="b3">#f77824</color>
+  <color name="b4">#00aa4a</color>
+
+  <!--
+     button23.setBackgroundColor(0xffd6d7d7);//gray
+        button24.setBackgroundColor(0xFFDB0101);//red
+        button24.setBackgroundColor(0xFFF77824);//orang
+        button24.setBackgroundColor(0xFF00AA4A);// green
+        button27.setBackgroundColor(0xFF00AA4A);// green
+  -->
 </resources>
