--- a/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_choices.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bacground1"
@@ -20,8 +21,8 @@
             android:layout_width="239dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/Trend_btn"
-            android:layout_marginTop="65dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="79dp"
             android:background="@drawable/rounded_button"
             android:padding="12dp"
             android:text="Check Availability"
@@ -86,29 +87,14 @@
             tools:layout_editor_absoluteX="52dp"
             tools:layout_editor_absoluteY="318dp" />
 
-        <Button
-            android:id="@+id/Trend_btn"
-            android:layout_width="239dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/relativeLayout"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/rounded_button"
-            android:padding="12dp"
-            android:text="Show Occupancy Trend "
-            android:textAllCaps="false"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="52dp"
-            tools:layout_editor_absoluteY="318dp" />
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_below="@+id/show_res_btn"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="24dp"
-            android:id="@+id/relativeLayout">
+            android:layout_marginTop="24dp">
 
             <ProgressBar
                 android:id="@+id/progressbar1"
@@ -133,6 +119,22 @@
                 android:visibility="gone" />
         </RelativeLayout>
 
+
     </RelativeLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.NavigationView
+
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="start"
+        android:background="#ceebf9"
+        app:headerLayout="@layout/navigation_header"
+        app:itemIconTint="#1976D2"
+        app:itemTextColor="#1976D2"
+        app:menu="@menu/menu2">
+
+    </android.support.design.widget.NavigationView>
+</android.support.v4.widget.DrawerLayout>
