--- a/materiallogindemo-master/app/src/main/res/layout/activity_contact_us.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_contact_us.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:stretchColumns="1">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -24,7 +39,7 @@
         android:layout_below="@+id/textView9"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
-        android:text="If you question, concern or problem, do not hesitate to contact us. Please fill the form below and we will call you back shortly."
+        android:text="If you have any question, concern or problem, do not hesitate to contact us. Please fill the form below and we will call you back shortly."
         android:textAlignment="center"
         android:gravity="center"/>
 
@@ -32,10 +47,9 @@
         android:id="@+id/editText"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView10"
         android:layout_alignStart="@+id/textView10"
         android:layout_below="@+id/textView10"
-        android:layout_marginTop="63dp"
+        android:layout_marginTop="43dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
@@ -57,25 +71,29 @@
     <EditText
         android:id="@+id/editText3"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText2"
+        android:layout_height="100dp"
         android:layout_alignStart="@+id/editText2"
         android:layout_below="@+id/editText2"
         android:layout_marginTop="24dp"
+        android:background="@drawable/custom_button"
         android:ems="10"
         android:hint="Message"
-        android:inputType="textMultiLine"
+        android:inputType="textMultiLine|textLongMessage"
         android:textSize="14sp" />
+
 
     <Button
         android:id="@+id/button19"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="25dp"
         android:background="@drawable/rounded_button"
         android:onClick="senMail"
         android:text="send"
         android:textColor="@color/common_google_signin_btn_text_dark_default" />
 </RelativeLayout>
+
+    </TableLayout>
+</ScrollView>
