--- a/materiallogindemo-master/app/src/main/res/layout/activity_first.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/activity_first.xml
@@ -73,7 +73,7 @@
                 android:layout_marginStart="50dp"
                 android:background="@drawable/rounded_button"
                 android:padding="12dp"
-                android:text="Continue as VIP User"
+                android:text="Join as VIP User"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
