--- a/materiallogindemo-master/app/src/main/res/layout/property_layout.xml
+++ b/materiallogindemo-master/app/src/main/res/layout/property_layout.xml
@@ -11,9 +11,9 @@
         android:id="@+id/image"
         android:layout_width="150dp"
         android:layout_height="160dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp"
-        android:contentDescription="Property Image"
-        android:layout_marginEnd="15dp" />
+        android:contentDescription="Property Image" />
 
     <LinearLayout
         android:id="@+id/infoSection"
