--- a/materiallogindemo-master/app/src/main/res/values/colors.xml
+++ b/materiallogindemo-master/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
   <color name="colorAccent3">#ed7d31</color>
   <color name="bar">#00aa4a</color>
   <color name="chart">#03A9F4</color>
-  <color name="b1">#d6d7d7</color>
+  <color name="b1">#a3a6a6</color>
   <color name="b2">#db0101</color>
   <color name="b3">#f77824</color>
   <color name="b4">#00aa4a</color>
